[tool.poetry]
name = "datadroplet"
version = "0.1.0"
description = ""
authors = ["koii"]

[tool.poetry.dependencies]
python = "^3.11"
pathlib = "^1.0.1"
DateTime = "^5.4"
scipy = "^1.12.0"
pandas = "^2.2.1"
numpy = "^1.26.4"
xarray = "^2024.2.0"
matplotlib = "^3.8.3"
pyproj = "^3.6.1"
netCDF4 = "^1.6.5"
zarr = "^2.17.0"
iris = "^1.0.7"
Bottleneck = "^1.3.8"
numbagg = "^0.8.0"
Cartopy = "^0.22.0"
seaborn = "^0.13.2"
nc-time-axis = "^1.4.1"
sparse = "^0.15.1"
Pint = "^0.23"
pycwt = "^0.4.0-beta.0"

[tool.poetry.dev-dependencies]
black = "^24.2.0"
pytest = "^8.0.2"
ipykernel = "^6.29.3"
ruff = "^0.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
select = ["E", "F", "I", "UP"]
target-version = "py310"
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
    "W191",  # indentation contains tabs
    
]

[tool.ruff.format]
quote-style = "single"
